--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "reset-css": "^5.0.1",
+    "sass": "^1.52.3",
     "typescript": "^4.7.4"
   }
 }
