--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "devDependencies": {
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
+    "@zeit/next-css": "^1.0.1",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "next-purgecss": "^4.0.0",
     "reset-css": "^5.0.1",
     "sass": "^1.52.3",
     "typescript": "^4.7.4"
