--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^3.3.2",
+    "@sanity/image-url": "^1.0.1",
     "next": "12.1.6",
+    "next-sanity": "^0.6.0",
     "photoswipe": "^5.2.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
