--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sanity/client": "^3.3.2",
     "@sanity/image-url": "^1.0.1",
+    "bootstrap": "^5.2.1",
     "date-fns": "^2.28.0",
     "next": "12.1.6",
     "next-sanity": "^0.6.0",
